infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  selector:
    matchLabels:
      app:  event-bus
  replicas: 1
  template:
    metadata:
      labels:
        app:  event-bus
    spec:      
      containers:
        - name: event-bus
          image:  johnlawliet/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-int-serv
spec:
  type: ClusterIP
  selector:
    app:  event-bus
  ports:
    - name: event-bus
      port: 5000
      targetPort: 5000
      protocol: TCP
