infra/k8s/ingress-serv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex:  'true' 
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-int-serv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-serv
                port:
                  number: 4200
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-serv
                port:
                  number: 4100
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-serv
                port:
                  number: 3000
